--- a/index.html
+++ b/index.html
@@ -706,6 +706,8 @@
 		</main>
 
 		<script src="./assets/js/main.js"></script>
+		<script src="./assets/js/cbpAnimatedHeader.js"></script>
+		<script src="./assets/js/classie.js"></script>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
