added scrollpy logic to all pages

--- a/resources/index.html
+++ b/resources/index.html
@@ -14,7 +14,7 @@
 		<meta content="b5M7Yl24JKrqUjl/pUF1n/FqwzTJzJoCPiQdCLAlihQ=" name="csrf-token" />
 
 	</head>
-	<body>
+	<body data-spy="scroll">
     <a id="top"></a>
 		<div id="top">
 			<nav class="navbar navbar-default" role="navigation">
@@ -642,6 +642,8 @@
 		</main>
     
 		<script src="../assets/js/main.js"></script>
+    <script src="../assets/js/cbpAnimatedHeader.js"></script>
+    <script src="../assets/js/classie.js"></script>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
