--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
 		<meta content="b5M7Yl24JKrqUjl/pUF1n/FqwzTJzJoCPiQdCLAlihQ=" name="csrf-token" />
 	</head>
 
-	<body>
+	<body data-spy="scroll">
 		<div>
 			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 				<!-- Brand and toggle get grouped for better mobile display -->
@@ -109,6 +109,8 @@
 		</main>
 
 		<script src="../assets/js/main.js"></script>
+		<script src="../assets/js/cbpAnimatedHeader.js"></script>
+		<script src="../assets/js/classie.js"></script>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
