--- a/places/index.html
+++ b/places/index.html
@@ -14,7 +14,7 @@
 		<meta content="VSEiLP5IT7TuM7l4z3N3sK1lZC87SYp6fHV54v8o8Uw=" name="csrf-token" />
 
 	</head>
-	<body>
+	<body data-spy="scroll">
     <div>
       <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -166,6 +166,8 @@
     <script src="../assets/js/main.js"></script>
     <script src="../assets/js/chart.js"></script>
     <script src="../assets/js/places.js"></script>
+    <script src="../assets/js/cbpAnimatedHeader.js"></script>
+    <script src="../assets/js/classie.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
