added new resource

--- a/resources/index.html
+++ b/resources/index.html
@@ -360,10 +360,23 @@
               <div class="row-fluid col-md-12 resource-header2"><h2>REAP Teams in the News</h2></div>
               <div class="row-fluid col-md-12">
                 <div class='col-md-3 article-container'>
+                  <a href='http://gov.wales/newsroom/businessandeconomy/2015/150428-programme/?lang=en'>
+                    <div class='article-inner'>
+                      <div class='article-image-container'>
+                        <img src='../assets/images/wales-cohort3.png' class='article-image article-image-width'>
+                      </div>
+                      <div class='article-description'>
+                        <span class='article-title'>Wales selected for MIT REAP Cohort 3</span><br/>
+                        <span class='article-author'>Welsh Government</span>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class='col-md-3 article-container'>
                   <a href='http://news.asiaone.com/news/singapore/spore-offers-be-test-bed-urban-solutions'>
                     <div class='article-inner'>
                       <div class='article-image-container'>
-                        <img src='http://news.asiaone.com/sites/default/files/styles/full_left_image-630x411/public/original_images/Nov2014/20141103_jtc_launchpad_onenorth.jpg?itok=Dd3zqM_v'>
+                        <img src='http://news.asiaone.com/sites/default/files/styles/full_left_image-630x411/public/original_images/Nov2014/20141103_jtc_launchpad_onenorth.jpg?itok=Dd3zqM_v' class='article-image article-image-width'>
                       </div>
                       <div class='article-description'>
                         <span class='article-title'>Singapore offers to be test bed for urban solutions</span><br/>
@@ -376,7 +389,7 @@
                   <a href='http://www.ida.gov.sg/Tech-Scene-News/Smart-Nation-Vision'>
                     <div class='article-inner'>
                       <div class='article-image-container'>
-                        <img src='../assets/images/smartNationSingapore.jpg'>
+                        <img src='../assets/images/smartNationSingapore.jpg' class='article-image article-image-width'>
                       </div>
                       <div class='article-description'>
                         <span class='article-title'>Smart Nation | Singapore</span><br/>
@@ -389,24 +402,11 @@
                   <a href='http://www.gulf-times.com/qatar/178/details/431047/techtalk-highlights-initiatives'>
                     <div class='article-inner'>
                       <div class='article-image-container'>
-                        <img src='../assets/images/local1.jpg'>
+                        <img src='../assets/images/local1.jpg' class='article-image article-image-width'>
                       </div>
                       <div class='article-description'>
                         <span class='article-title'>TECHtalk highlights initiatives</span><br/>
                         <span class='article-author'>Gulf Times</span>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class='col-md-3 article-container'>
-                  <a href='http://www.zawya.com/story/QSTP_programmes_boost_Qatars_capacity_to_create_commercial_technologies-ZAWYA20150315104138/'>
-                    <div class='article-inner'>
-                      <div class='article-image-container'>
-                        <img src='../assets/images/zawya.png'>
-                      </div>
-                      <div class='article-description'>
-                        <span class='article-title'>QSTP programmes boost Qatar's capacity to create commercial technologies</span><br/>
-                        <span class='article-author'>Thomson Reuters | Zawya</span>
                       </div>
                     </div>
                   </a>
