--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta content="getTOUjZHyv1qibpj4PGLjurrgEOnLnQxzz2IC+UHTc=" name="csrf-token" />
 	</head>
 
-	<body>
+	<body data-spy="scroll">
 		<div id="home">
 			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 
