edited twitter widget to show #MITREAP as its title

--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
 				<div class="col-md-3 col-sm-4 hidden-sm hidden-xs">
 					<!-- tweets. Will be hidden in extra-small screens e.g. mobile phone -->
 					<div class ="homepage-top-tweets">
-						<a class="twitter-timeline" href="https://twitter.com/search?q=MITREAP" data-widget-id="542443678191480835">Tweets about MITREAP</a>
-						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-						</script>
+						<a class="twitter-timeline" href="https://twitter.com/hashtag/MITREAP" data-widget-id="593982884370853888">#MITREAP Tweets</a>
+						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 					</div>
 				</div>
 				<div class="col-md-9 col-sm-12 col-xs-12 resource-column">
 					<div class= "img_1">
-						<p id="tweets-link" class="visible-sm visible-xs pull-right"><a href="#tweets">Tweets about <span class="bold-font">#MITREAP</span></a></p>
+						<p id="tweets-link" class="visible-sm visible-xs pull-right"><a href="#tweets"><span class="bold-font">#MITREAP</span> Tweets</a></p>
 						<div class="mainpic-text" id="regional-main-text">Regional</div>
 						<div class="mainpic-text" id="entrepreneurship-main-text">Entrepreneurship</div>
 						<div class="mainpic-text" id="acceleration-main-text">Acceleration</div>
@@ -698,8 +697,8 @@
 			<div class="container homepage-bottom-tweets visible-sm visible-xs">
 				<div class="row">
 					<div class="col-xs-10 col-xs-offset-1">
-						<a class="twitter-timeline" href="https://twitter.com/search?q=MITREAP" data-widget-id="542443678191480835">Tweets about MITREAP</a>
-			        	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>	
+						<a class="twitter-timeline" href="https://twitter.com/hashtag/MITREAP" data-widget-id="593982884370853888">#MITREAP Tweets</a>
+						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 					</div>
 				</div>
 			</div>
