--- a/resources/index.html
+++ b/resources/index.html
@@ -64,8 +64,8 @@
           <div class="row resource-panel resource-left-panel hidden-xs">
             <!-- The following code returns a 
             get with ID: twitter-widget-0. The number corresponds to the number of widgets created. Twitter-widget-1 is below.-->
-            <a class="twitter-timeline" href="https://twitter.com/search?q=MITREAP" data-widget-id="542443678191480835">Tweets about MITREAP</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+           <a class="twitter-timeline" href="https://twitter.com/hashtag/MITREAP" data-widget-id="593982884370853888">#MITREAP Tweets</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           </div>
         </div>
 
@@ -632,8 +632,7 @@
           
           <!-- tweets. Will be displayed only in extra-small screens e.g. mobile phone -->
           <div class="row-fluid resource-panel resource-left-panel visible-xs">
-            <!-- The following code returns a twitter widget with ID: twitter-widget-1. The number corresponds to the number of widgets created. Twitter-widget-0 is above. -->
-            <a class="twitter-timeline" href="https://twitter.com/search?q=MITREAP" data-widget-id="542443678191480835">Tweets about MITREAP</a>
+            <a class="twitter-timeline" href="https://twitter.com/hashtag/MITREAP" data-widget-id="593982884370853888">#MITREAP Tweets</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           </div>
           
