Fixed about page for mobile display

--- a/about/index.html
+++ b/about/index.html
@@ -62,7 +62,7 @@
 						<p>
 							MIT REAP admits 8-10 partner regions annually to participate in the two-year engagement.  A typical <a href='../#partner-regions'>REAP region</a> has a population of 3-10 million people.  Each partner region has a <a href='../assets/pdf/REAP_Ideal_Team.pdf'>team</a> comprised of 5-7 highly driven and influential regional members and is headed by a regional champion.  All 5 major stakeholder groups are represented in an MIT REAP team: government, corporate, academia, risk capital, and the entrepreneurial community.
 						</p>
-						<img alt="Who" class="who-circle col-sm-12" src="../assets/images/who.png" />
+						<img alt="Who" class="full-width-img who-circle col-sm-12" src="../assets/images/pentacle-gray-background.png" />
 					</div>
 					<div class="col-sm-4 info-col info-col-line-double" id="ideate-col">
 						<div class="circle-smaller dark-blue-reap">
@@ -82,7 +82,7 @@
 							<li class='bulleted-list'><b>Cultivate</b> a global community of regions and individuals interested in ecosystem development</li>
 						</ul>
 						<p>Partner Region Case studies coming soon</p>
-						<img alt="Why" class="why-circle col-sm-12" src="../assets/images/why.png" />
+						<img alt="Why" class="full-width-img why-circle col-sm-12" src="../assets/images/why.png" />
 						
 					</div>
 					<div class="col-sm-4 info-col" id="evaluate-col">
@@ -101,12 +101,31 @@
 							(2) Action phases are active time between workshops where teams return home to deepen analysis, validate assumptions with a broad network, and implement new programs and policies. See <a href="../assets/pdf/REAP_Ideal_Team.pdf">here</a> for example program launched
 						</p>
 						<p>Tentative Agenda coming soon.</p>
-						<img alt="How" class="how-circle col-sm-12" src="../assets/images/how.png" />
+						<img id="learning-cycle-img" alt="How" class="full-width-img how-circle col-sm-12" src="../assets/images/learning-cycle.jpg" data-toggle="modal" data-target="#learning-cycle-modal"/>
 						
 					</div>	
 				</div>
 			</div>
 		</main>
+
+		<!-- Beginning of Modal block -->
+        <div id="learning-cycle-modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel-2" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+                <h4 class="modal-title" id="myLargeModalLabel-2">REAP action-learning cycles</h4>
+              </div>
+              <div class="modal-body">
+                <img src="../assets/images/learning-cycle.jpg" class="img-responsive img-rounded center-block" alt="REAP action-learning cycles">
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+              </div>
+            </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div><!-- /.modal mixer image -->
+        <!-- End of Modal block -->
 
 		<script src="../assets/js/main.js"></script>
 		<script src="../assets/js/cbpAnimatedHeader.js"></script>
