Added Francesco to REAP team

--- a/index.html
+++ b/index.html
@@ -519,6 +519,24 @@
 		                    </a>
 		                  </div>
 		                </div>
+
+		                <!-- xxxxxxxxxxxxxxx -->
+		                <div class='col-md-3 col-sm-4'>
+		                  <div class="person-holder">
+		                    <a href="http://francescopaoloappio.weebly.com/">
+		                      <div class="circle red-reap person-circle">
+		                        <img alt="Francesco" class="person-img" src="./assets/images/francesco.png" />
+		                        <div class="circle gray-reap overlay-circle"></div>
+		                        <p class="name-label white-text">
+		                          Francesco Paolo Appio</br>
+		                          MIT Visiting Scholar
+		                        </p>
+		                      </div>
+		                      <p class="person-caption">Francesco Paolo Appio</p>
+		                    </a>
+		                  </div>
+		                </div>
+		                <!-- xxxxxxxxxxxxxxx -->
             			
             			<div class='col-md-3 col-sm-4'>
 		                  <div class="person-holder">
