implemented navbar shrinking logic

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 						<span class="icon-bar"></span>
 					</button>
 
-					<a class="navbar-brand" href="/"><img alt="Reaplogo beta" id="reaplogo" src="./assets/images/reaplogo.png" /></a>
+					<a id="navbar-brand-lg" class="navbar-brand" href="/"><img alt="Reaplogo beta" id="reaplogo" src="./assets/images/reaplogo.png" /></a>
+					<a id="navbar-brand-sm" class="navbar-brand" href="/"><img alt="Reaplogo beta" id="reaplogo-small" src="./assets/images/reaplogo-small.png" /></a>
 
 				</div>
 
