--- a/apply/index.html
+++ b/apply/index.html
@@ -25,7 +25,8 @@
 						<span class="icon-bar"></span>
 					</button>
 
-					<a class="navbar-brand" href="../"><img alt="Reaplogo beta" id="reaplogo" src="../assets/images/reaplogo.png" /></a>
+					<a id="navbar-brand-lg" class="navbar-brand" href="/"><img alt="Reaplogo beta" id="reaplogo" src="./assets/images/reaplogo.png" /></a>
+					<a id="navbar-brand-sm" class="navbar-brand" href="/"><img alt="Reaplogo beta" id="reaplogo-small" src="./assets/images/reaplogo-small.png" /></a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
