added partner regions dropdown and updated resources

--- a/about/index.html
+++ b/about/index.html
@@ -24,8 +24,8 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a id="navbar-brand-lg" class="navbar-brand" href="/"><img alt="Reaplogo beta" id="reaplogo" src="./assets/images/reaplogo.png" /></a>
-					<a id="navbar-brand-sm" class="navbar-brand" href="/"><img alt="Reaplogo beta" id="reaplogo-small" src="./assets/images/reaplogo-small.png" /></a>
+					<a id="navbar-brand-lg" class="navbar-brand" href="/"><img alt="Reaplogo" id="reaplogo" src="../assets/images/reaplogo.png" /></a>
+					<a id="navbar-brand-sm" class="navbar-brand" href="/"><img alt="Reaplogo" id="reaplogo-small" src="../assets/images/reaplogo-small.png" /></a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
@@ -33,8 +33,13 @@
 					<ul class="nav navbar-nav navbar-right reap-nav1">
 						<li><a href="../" class='navbar-link'>Home</a></li>
 						<li class="active"><a href="#" class='navbar-link'>About</a></li>
-						<li><a class="navbar-link" href="../assets/pdf/advantage.pdf">MIT Advantage</a></li>
-						<li><a class="navbar-link" href="../#partner-regions" id="partner-regions-link">Partner Regions</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle navbar-link no-page-scroll" data-toggle="dropdown" role="button" aria-expanded="false">Partner Regions <span class="fa fa-caret-down"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="../#regions-cohort1" class='navbar-link'>Cohort One</a></li>
+								<li><a href="../#regions-cohort2" class='navbar-link'>Cohort Two</a></li>
+							</ul>
+						</li>
 						<li><a class="navbar-link" href="../#our-team" id="our-team-link">Our Team</a></li>
 						<li><a href="../apply/" class='navbar-link'>Next Steps</a></li>
 						<li><a href="../resources/" class='navbar-link'>Resources</a></li>
@@ -54,7 +59,7 @@
 
 			<div class="container">
 				<div class="content-row-about row col-sm-12">
-					<p>The MIT Regional Entrepreneurship Acceleration Program (MIT REAP) is a capstone global initiative at MIT designed to help regions accelerate economic growth and job creation through <a href='http://www.kauffman.org/~/media/kauffman_org/research%20reports%20and%20covers/2013/05/ataleoftwoentrepreneurs.pdf'>innovation-driven entrepreneurship (IDE)</a>.  Partner regions form multi-disciplinary teams and commit to a two-year learning engagement with MIT. During this engagement, teams work with world-renowned MIT faculty and the broader REAP community through a series of action-learning activities to build and implement a custom regional strategy for enhancing their IDE ecosystems. Download a REAP brochure <a href='../assets/pdf/brochure.pdf'>here.</a></p> 
+					<p>The MIT Regional Entrepreneurship Acceleration Program (MIT REAP) is a capstone global initiative at MIT designed to help regions accelerate economic growth and job creation through <a href='http://www.kauffman.org/~/media/kauffman_org/research%20reports%20and%20covers/2013/05/ataleoftwoentrepreneurs.pdf'>innovation-driven entrepreneurship (IDE)</a>.  Partner regions form multi-disciplinary teams and commit to a two-year learning engagement with MIT. During this engagement, teams work with world-renowned MIT faculty and the broader REAP community through a series of action-learning activities to build and implement a custom regional strategy for enhancing their IDE ecosystems. Further details are also available in the <a href='../assets/pdf/brochure.pdf'>REAP brochure</a> and <a href='../assets/pdf/MIT_REAP_Overview_2015.pdf'>program overview</a></p> 
 					<div class="col-sm-4 info-col" id="collaborate-col">
 						<div class="circle-smaller dark-blue-reap">
 							<i class="fa fa-cog about-icon-cog"></i>
