--- a/resources/index.html
+++ b/resources/index.html
@@ -26,8 +26,8 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a id="navbar-brand-lg" class="navbar-brand" href="/"><img alt="Reaplogo beta" id="reaplogo" src="./assets/images/reaplogo.png" /></a>
-          <a id="navbar-brand-sm" class="navbar-brand" href="/"><img alt="Reaplogo beta" id="reaplogo-small" src="./assets/images/reaplogo-small.png" /></a>
+					<a id="navbar-brand-lg" class="navbar-brand" href="/"><img alt="Reaplogo" id="reaplogo" src="../assets/images/reaplogo.png" /></a>
+          <a id="navbar-brand-sm" class="navbar-brand" href="/"><img alt="Reaplogo" id="reaplogo-small" src="../assets/images/reaplogo-small.png" /></a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
@@ -35,8 +35,13 @@
 					<ul class="nav navbar-nav navbar-right reap-nav1">
 						<li><a href="../" class='navbar-link'>Home</a></li>
 						<li><a href="../about/" class='navbar-link'>About</a></li>
-						<li><a class="navbar-link" href="../assets/pdf/advantage.pdf">MIT Advantage</a></li>
-						<li><a class="navbar-link" href="../#partner-regions" id="partner-regions-link">Partner Regions</a></li>
+						<li class="dropdown">
+              <a href="#" class="dropdown-toggle navbar-link no-page-scroll" data-toggle="dropdown" role="button" aria-expanded="false">Partner Regions <span class="fa fa-caret-down"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="../#regions-cohort1" class='navbar-link'>Cohort One</a></li>
+                <li><a href="../#regions-cohort2" class='navbar-link'>Cohort Two</a></li>
+              </ul>
+            </li>
 						<li><a class="navbar-link" href="../#our-team" id="our-team-link">Our Team</a></li>
 						<li><a class="navbar-link" href="../apply/">Next Steps</a></li>
             <li class="active"><a class="navbar-link" href="#">Resources</a></li>            
@@ -221,6 +226,32 @@
               <div class="row-fluid col-md-12 resource-header2"><h2>Faculty Articles</h2></div>                
               <div class="row-fluid col-md-12">
                 <div class='col-md-3 article-container'>
+                  <a href='http://www.sciencemag.org/content/348/6240/1203.full'>
+                    <div class='article-inner'>
+                      <div class='article-image-container'>
+                        <img src='../assets/images/pentacle-blue.jpg' class='article-image article-image-width'>
+                      </div>
+                      <div class='article-description'>
+                        <span class='article-title'>Linking and leveraging</span><br/>
+                        <span class='article-author'>Fiona Murray and Scott Stern</span>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class='col-md-3 article-container'>
+                  <a href='http://disciplinedentrepreneurship.com/blog/new-mathematics-startup-valuation'>
+                    <div class='article-inner'>
+                      <div class='article-image-container'>
+                        <img src='../assets/images/startup-valuation.jpg' class='article-image article-image-width'>
+                      </div>
+                      <div class='article-description'>
+                        <span class='article-title'>The New Mathematics of Startup Valuation</span><br/>
+                        <span class='article-author'>Bill Aulet</span>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class='col-md-3 article-container'>
                   <a href='http://betaboston.com/global-business-hub/2014/04/18/innovation-diplomacy/'>
                     <div class='article-inner'>
                       <div class='article-image-container'>
@@ -242,32 +273,6 @@
                       <div class='article-description'>
                         <span class='article-title'>Greater Boston 2014 outlook: Entrepreneurial opportunity in the global innovation economy</span><br/>
                         <span class='article-author'>Phil Budden and Fiona Murray</span>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class='col-md-3 article-container'>
-                  <a href='http://sloanreview.mit.edu/article/spurring-innovation-through-competitions/'>
-                    <div class='article-inner'>
-                      <div class='article-image-container'>
-                        <img src='../assets/images/innovationthroughcompetition.jpg' class='article-image article-image-width'>
-                      </div>
-                      <div class='article-description'>
-                        <span class='article-title'>Spurring Innovation Through Competitions</span><br/>
-                        <span class='article-author'>Alan MacCormack, Fiona Murray and Erika Wagner</span>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <div class='col-md-3 article-container'>
-                  <a href='http://mitsloanexperts.mit.edu/teaching-entrepreneurship-is-in-the-startup-phase/'>
-                    <div class='article-inner'>
-                      <div class='article-image-container'>
-                        <img src='http://www.disciplinedentrepreneurship.com/photos/rigorous300.png' class='article-image article-image-width'>
-                      </div>
-                      <div class='article-description'>
-                        <span class='article-title'>Teaching Entrepreneurship in the Startup Phase</span><br/>
-                        <span class='article-author'>Bill Aulet</span>
                       </div>
                     </div>
                   </a>
