Fixed image sizes in resources page

--- a/resources/index.html
+++ b/resources/index.html
@@ -97,7 +97,7 @@
                   <a href='../assets/pdf/MIT_REAP_Overview_2015.pdf'>
                     <div class='article-inner'>
                       <div class='article-image-container'>
-                        <img src='../assets/images/reapOverview2015.png' class='article-image article-image-height'>
+                        <img src='../assets/images/reapOverview2015.png' class='article-image article-image-width'>
                       </div>
                       <div class='article-description'>
                         <span class='article-title'>MIT REAP Overview 2015</span><br/>
@@ -110,7 +110,7 @@
                   <a href='../assets/pdf/brochure.pdf'>
                     <div class='article-inner'>
                       <div class='article-image-container'>
-                        <img src='../assets/images/acceleration.png' class='article-image article-image-height'>
+                        <img src='../assets/images/acceleration.png' class='article-image article-image-width'>
                       </div>
                       <div class='article-description'>
                         <span class='article-title'>Brochure</span><br/>
@@ -123,7 +123,7 @@
                   <a href='../assets/pdf/advantage.pdf'>
                     <div class='article-inner'>
                       <div class='article-image-container'>
-                        <img src='../assets/images/advantage.png' class='article-image article-image-height'>
+                        <img src='../assets/images/advantage.png' class='article-image article-image-width'>
                       </div>
                       <div class='article-description'>
                         <span class='article-title'>The REAP Advantage</span><br/>
@@ -136,7 +136,7 @@
                   <a href='../assets/pdf/REAP_Ideal_Team.pdf'>
                     <div class='article-inner'>
                       <div class='article-image-container'>
-                        <img src='../assets/images/ideal_team.png' class='article-image article-image-height'>
+                        <img src='../assets/images/ideal_team.png' class='article-image article-image-width'>
                       </div>
                       <div class='article-description'>
                         <span class='article-title'>The Ideal REAP Team</span><br/>
@@ -452,7 +452,7 @@
             <!-- Panel -->
             <div class="section-anchor" id="reap-initiatives">
             </div>
-            <div class="row resource-row">
+            <div class="row resource-row" id="reap-initiatives-container">
               <div class="row-fluid col-md-12 resource-header-row">
                 <ul class="nav nav-pills resource-header-nav initiatives-header">
                   <li><a href="#reap-initiatives"><h2>REAP-Related Initiatives and Teaching</h2></a></li>
