Added new resources section and added new articles

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -78,7 +78,7 @@
                 </ul>
               </div> <!-- btn-group end -->
 			</div>
-      <div class="container" id="resource-main-panel">
+      <div class="container-fluid" id="resource-main-panel">
         <div class="col-md-3 col-sm-5 resource-column">
           <div class="row resource-panel dashboard-left-panel">
             <div
@@ -210,12 +210,11 @@
                     <h3>Entrepreneurship Capacity Analysis</h3>
                     <div id="ecap-carousel" class="carousel slide" data-ride="carousel">
                       <!-- Wrapper for slides -->
-                      <div class="carousel-inner" id="catalysts-charts" role="listbox">
+                      <div class="carousel-inner" id="ecap-charts" role="listbox">
                       </div>
                       <!-- Indicators -->
                       <ol class="carousel-indicators">
                       </ol>
-
                       <!-- Controls -->
                       <a class="left carousel-control no-page-scroll" href="#ecap-carousel" role="button" data-slide="prev">
                         <span class="fa fa-chevron-left dashboard-chevron" aria-hidden="true"></span>
